--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="ui center aligned very padded basic segment">
                         <div class="ui header">
-                            <h1 style="font-size: 2em; font-weight: lighter;">this page is intentionally blank</h1>
+                            <h1 style="font-size: 2em; font-weight: lighter;">this page was left intentionally blank</h1>
                         </div>
                     </div>
                 </li>
